--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
 	<title>todo</title>
-  <link rel="stylesheet" href="style.css">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="bootstrap.min.css">
 	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript" src="bootstrap.min.js"></script>
-
+	<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
